--- a/gcc_starter_kit_labs/landingzone/configuration/0-launchpad/launchpad/config.yaml
+++ b/gcc_starter_kit_labs/landingzone/configuration/0-launchpad/launchpad/config.yaml
@@ -1,4 +1,4 @@
-prefix: "yourprefix"
+prefix: "ttsdev"
 location: "southeastasia"
 environment: "sandpit"
 # subnets cidr configuration
@@ -9,4 +9,11 @@ subnets:
     # e.g.
     # WebSubnet: # DO NOT CHANGE subnet name
     #   address_prefixes: ["100.64.0.0/27"]          
-
+    WebSubnet: # DO NOT CHANGE subnet name
+        address_prefixes: ["100.64.0.0/27"]
+    AppSubnet: # DO NOT CHANGE subnet name
+        address_prefixes: ["100.64.0.32/27"]
+    DbSubnet: # DO NOT CHANGE subnet name
+        address_prefixes: ["100.64.0.64/27"]
+    ServiceSubnet: # DO NOT CHANGE subnet name
+      address_prefixes: ["100.64.0.96/27"]
