--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CAF Platform Starter Terraform landing zones",
+    "name": "AVM GCC Starter kit",
 
     // Update the 'dockerComposeFile' list if you have more compose files or use different names.
     "dockerComposeFile": "docker-compose.yml",
@@ -9,11 +9,11 @@
 
     // The 'service' property is the name of the service for the container that VS Code should
     // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
-    "service": "rover",
+    "service": "avm",
 
     // The optional 'workspaceFolder' property is the path VS Code should open by default when
     // connected. This is typically a volume mount in .devcontainer/docker-compose.yml
-    "workspaceFolder": "/tf/caf",
+    "workspaceFolder": "/tf/avm",
 
     // Uncomment the next line if you want start specific services in your Docker Compose config.
     // "runServices": [],
