--- a/gcc_starter_kit_labs/landingzone/configuration/0-launchpad/launchpad/config.yaml
+++ b/gcc_starter_kit_labs/landingzone/configuration/0-launchpad/launchpad/config.yaml
@@ -1,4 +1,4 @@
-prefix: "ttsdev"
+prefix: "<your project code prefix>"
 location: "southeastasia"
 environment: "sandpit"
 # subnets cidr configuration
